# Claude-Code-Profile-Manage

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml
ccp/: Cargo.toml  README.md  install.sh
ccp/src/: lib.rs  main.rs
ccp/src/config/: mod.rs  profile.rs  store.rs
ccp/src/shell/: generator.rs
ccp/src/tui/: app.rs  detail.rs  form.rs  list.rs  mod.rs  ui.rs
ccp/tests/: test_app.rs  test_generator.rs  test_profile.rs  test_store.rs
docs/superpowers/plans/: 2026-06-17-ccp-implementation.md
docs/superpowers/specs/: 2026-06-17-ccp-design.md
src/: app.rs  generator.rs  list.rs  main.rs  profile.rs
src/config/: profile.rs  store.rs
src/shell/: generator.rs
src/tui/: app.rs  form.rs  ui.rs
tests/: test_generator.rs  test_store.rs
